--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,11 @@
 body{
     color: deeppink;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+   
 }
 
 #container{
@@ -10,4 +14,9 @@ body{
     text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
